syntax = "proto3";

option go_package = "./pb";

package pb;


message TeacherInterface{}

message TeacherDao{
  string createTime = 1;
  int64 createBy = 2;
  string updateTime = 3;
  int64 updateBy = 4;
  string remarks = 5;
  int64 ID = 6;
  string teachno = 7;
  string sex = 8;
  string phone = 9;
  string QQ = 10;
  string courseName = 11;
  string name=12;
}


message GetTeacherReq{
  int32 pageIndex = 1;
  int32 pageSize = 2;
  string searchValue = 3;
}
message GetTeacherResp{
  repeated TeacherDao content = 1;
  int64    totalElements = 2;
}
message GetTeacherByIDReq{
  int64 ID = 1;
}
message GetTeacherByIDResp {
  string createTime = 1;
  int64 createBy = 2;
  string updateTime = 3;
  int64 updateBy = 4;
  string remarks = 5;
  int64 ID = 6;
  string teachno = 7;
  string sex = 8;
  string phone = 9;
  string QQ = 10;
  int64 CourseID=11;
  string name=12;
  int64 CourseName=13;
}
message UpdateTeacherReq {
  string remarks = 1;
  int64 ID = 2;
  string teachno = 3;
  string sex = 4;
  string phone = 5;
  string QQ = 6;
  int64 courseID = 7;
  int64 updateByID=8;
  string name=9;
}
message AddTeacherReq{
  string remarks = 1;
  string teachno = 3;
  string sex = 4;
  string phone = 5;
  string QQ = 6;
  int64 courseID = 7;
  int64 byID = 8;
  string name=9;
}

message DeleteTeacherByIDReq{
  int64 teacherID = 1;
}


service teacher {
  rpc getTeacher  (GetTeacherReq) returns (GetTeacherResp);
  rpc getTeacherByID (GetTeacherByIDReq) returns (GetTeacherByIDResp);
  rpc updateTeacher (UpdateTeacherReq) returns (TeacherInterface);
  rpc addTeacher (AddTeacherReq) returns (TeacherInterface);
  rpc deleteTeacherByID (DeleteTeacherByIDReq) returns (TeacherInterface);

}